--- a/lighthouse.css
+++ b/lighthouse.css
@@ -1,2 +1,22 @@
-<!DOCTYPE HTML>
-<
+.timeline_detail{
+	font-size: 16px;
+	text-align: justify;
+	margin-right: 20px;
+}
+
+.timeline {
+	font-size: 40px;
+	text-decoration: none;
+	text-align: left;
+	color: gray;
+}
+
+.timeline li {
+	list-style: none;
+}
+
+
+.timeline li a{
+	color: inherit;
+	text-decoration: none;
+}
