--- a/lighthouse.css
+++ b/lighthouse.css
@@ -20,3 +20,14 @@
 	color: inherit;
 	text-decoration: none;
 }
+
+.donation_form{
+	border-color: gray;
+
+}
+
+.form{
+	background-color: lightgray;
+	padding: 10px;
+}
+
